@startuml

class File {
    metadata : Metadata
    log_messages : LogMessage[]
    scan : Scan
    data : Data[]
    snapshots : Data[]
    monitors : Data[]
    position_timestamps : TimestampData
}

File *-- "n" Data
note bottom: See diagram for\ndata module.

class Metadata{
    filename : string
    eveh5_version : string
    eve_version : string
    xml_version: string
    measurement_station : string
    start : datetime
    end : datetime
    description : string
    simulation : boolean
    preferred_axis : string
    preferred_channel : string
    preferred_normalisation_channel : string
}

class LogMessage {
    timestamp : datetime
    message : string
}

class Scan extends scan.boundaries.Scan {
    author : string
    filename : string
}
note left: See diagrams for\nscan subpackage.

File *-- Metadata
File "1" *-- "n" LogMessage
File *-- Scan

@enduml
